--- a/.hintrc
+++ b/.hintrc
@@ -17,6 +17,12 @@
       {
         "nested-interactive": "off"
       }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
     ]
   }
 }
