--- a/.hintrc
+++ b/.hintrc
@@ -24,6 +24,12 @@
         "image-alt": "off"
       }
     ],
-    "apple-touch-icons": "off"
+    "apple-touch-icons": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
   }
 }
